# Sonor-Stream

./: README.md  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/com/classic/sonorstream/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioPlayer.h  AudioRecord.cpp  CMakeLists.txt  CircularQueue.h  ClientCommThread.h  Constants.h  LockFreeQueue.h  OboeMicRecorder.h  OboePlayer.h  ReceivingSide.cpp  SocketInit.h  StreamEngine.cpp  StreamEngine.h  SystemAudioTransmission.h  native-lib.cpp
app/src/main/cpp/include/: AudioStreamCallback.h
app/src/main/cpp/mpg123/src/libmpg123/: mpg123.h
app/src/main/java/com/classic/sonorstream/: AboutActivity.java  ClientListAdapter.java  ClientListManager.java  Constants.java  FileUtils.java  MainActivity.java  PreferenceFragment.java  ReceiveActivity.java  ReceiveService.java  ServerListAdapter.java  ServerListManager.java  SettingsActivity.java  Splash.java  StreamActivity.java  StreamService.java  TogglePagerAdapter.java
app/src/main/res/color/: text_input_box_stroke.xml
app/src/main/res/drawable/: app_logo.xml  cast_icon.xml  cli_curved_back.xml  cli_curved_back_ip.xml  curved_rect.xml  edit_icon.xml  files_icon.xml  ic_help.xml  ic_info.xml  ic_search.xml  ic_settings.xml  ip_input_curve.xml  mic_icon.xml  movable_view_rr.xml  play_icon.xml  right_arrow.xml  server_status_circle.xml  stop_icon.xml  three_bars.xml  three_dots.xml  toggle_btn_bg_color.xml
app/src/main/res/layout/: about.xml  activity_main.xml  client_list_card.xml  layout_receive.xml  player.xml  server_bottom_sheet.xml  server_connected_layout.xml  server_list_card.xml  settings.xml  splash_layout.xml  stream_activity.xml
app/src/main/res/menu/: main_act_top_menu.xml  settings_top_menu.xml
app/src/main/res/values/: colors.xml  preloaded_fonts.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/xml/: preferences.xml
app/src/test/java/com/classic/sonorstream/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
